/* $Id: ChangeLog,v 1.2756 2005-02-14 16:25:15 abwillis Exp $ */
2005-02-12: Dietrich Teickner <dietrich_teickner@arcor   >  
    - kernel32: o src\kernel32\wintls.cpp
                  small regression.
    - ntdll       src\NTDLL\rtl.c, ntdll.def changes
                  RtlFillMemoryUlong, RtlInitializeCriticalSectionAndSpinCount
2005-02-08: Dietrich Teickner <dietrich_teickner@arcor   >  
    - kernel32: o src\kernel32\wintls.cpp
                  src\kernel32\asmutil.asm
                  faster tls-handling, one check more.
2005-01-26: vladest <vladest@voliacable >  
    - kernel32: o src\kernel32\wintls.cpp
                  tls - problems, workaround. 
2005-01-25: Dietrich Teickner <dietrich_teickner@arcor   >
    - kernel32: o src\kernel32\Fileio.cpp for msi.
                  src\kernel32\kernel32.def
2005-01-23: Dietrich Teickner <dietrich_teickner@arcor   >
    - kernel32: o src\kernel32\directory.cpp
                  src\kernel32\kernel32.def,kernel32dbg.def
                  src\kernel32\lang.cpp
                  src\kernel32\mmapview.cpp
                  src\kernel32\unicode\string.c
    - advapi32: o src\advapi32\ADVAPI32.DEF
                  src\advapi32\security.c
    - shell32:  o src\shell32\shell32_main.c                  
    - wininet:  o src\wininet\http.c
    - NTDLL:    o src\NTDLL\error.c
                  src\NTDLL\nt.c
                  src\NTDLL\sync.c
    - include:  o include\win\ntstatus.h,sddl.h            
                  include\win\cderr.h           
                  include\win\dlgs.h            
                  include\win\rpcnterr.h        
                  include\win\thread.h         
                  include\win\winnt.h 
                  2 new headers from wine. Some reorders for more wine-like, for msi,
                  new stups,functions for msi.
                  Please, Test this for regression in others, msi will more work yet, not properly end.